k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vestwise
  namespace: vestwise
  labels:
    app: vestwise
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vestwise
  template:
    metadata:
      labels:
        app: vestwise
    spec:
      containers:
        - name: vestwise
          image: anicu/vestwise:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
