k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vestwise
  namespace: vestwise
spec:
  type: NodePort
  selector:
    app: vestwise
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
